# rathena-deploy

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  FAQ.md  GM_COMMANDS.md  README.md  怪物技能列表.md  新增怪物與物品指南.md
.claude/: settings.local.json
.github/workflows/: deploy-full.yml  deploy-npc.yml
admin/: pyproject.toml
admin/ro_admin/: app.py  config.py  ssh.py
admin/ro_admin/screens/: accounts.py  char_edit.py  dashboard.py  send_items.py  server_ops.py  settings.py
client/: release.sh
client/System/: itemInfo_true.lub
client/data/: cardprefixnametable.txt  cardprefixnametable_en.txt  clientinfo.xml  mapnametable.txt  mapnametable_en.txt  msgstringtable.txt  msgstringtable_en.txt  questid2display.txt  skilldesctable.txt  skilldesctable2.txt  skillnametable.txt  tipoftheday.txt
docs/planning/: 01-traditional-chinese-localization.md  02-server-tui-tool.md  03-event-npc-items.md
server/: .env  .env.example  CLAUDE.md  Dockerfile  Gaebolg.txt  README.md  build.sh  deploy.sh  docker-compose.local.yml  docker-compose.yml  remote-build.sh  setup-vps.sh  update.sh
server/conf/: groups.yml
server/custom-npc/: all_renters.txt  card_giver.txt  card_separation.txt  custom_maps.txt  eco_mobs.txt  enchant_master.txt  enchant_master_en.txt  ep_shops.txt  grade_enhancer.txt  gympass.txt  healer.txt  homun_s.txt  illu_mobs.txt  jobmaster.txt  mvp_exchange.txt  mvp_room.txt  (+8 more)
tools/: enchant_prob.py  gen_skill_info_list.py  grf_extract.py  scrape_divine_pride.py  scrape_mob_skills.py  scrape_zh_names.py  translate_skilldesc.py  translate_skills.py
(+48 files in other folders)
