[project]
name = "ro-admin"
version = "0.1.0"
description = "rAthena private server management TUI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0",
    "paramiko>=3.0",
    "python-dotenv>=1.0",
    "pymysql>=1.1",
    "sshtunnel>=0.4",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ro-admin = "ro_admin.app:main"
